error locations fixed on mobile

--- a/Cloudents.Web/ClientApp/components/question/addQuestion/addQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/addQuestion/addQuestion.less
@@ -60,7 +60,8 @@
                 background-color: #ff6565;
                 color: #fff;
                 top: 63px;
-                line-height: 28px;
+                padding-top: 5px;
+                padding-bottom: 5px;
                 left: 18px;
                 z-index: 5;
                 padding-left: 18px;
@@ -230,7 +231,8 @@
                 box-shadow: 0 3px 8px 0 rgba(0,0,0,.19);
                 background-color: #ff6565;
                 top: -24px;
-                line-height: 28px;
+                padding-top: 5px;
+                padding-bottom: 5px;
                 left: 6px;
                 z-index: 15;
                 padding-left: 18px;
@@ -246,7 +248,7 @@
                     border-style: solid;
                     border-width: 10px 6px 0;
                     border-color: #ff6565 transparent transparent;
-                    top: 26px;
+                    bottom: -8px;
                     left: 28px;
                 }   
             }   
@@ -326,8 +328,9 @@
                 position: absolute;
                 box-shadow: 0 3px 8px 0 rgba(0,0,0,.19);
                 background-color: #ff6565;
-                top: 63px;
-                line-height: 28px;
+                bottom: -20px;
+                padding-top: 5px;
+                padding-bottom: 5px;
                 left: 18px;
                 z-index: 5;
                 padding-left: 18px;
